Add Vote rest controller and utils classes