@@ -5,6 +5,7 @@ import ru.favdemo.restaurantvoting.model.Dish;
 import ru.favdemo.restaurantvoting.to.DishTo;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class DishUtil {
@@ -12,8 +13,7 @@ public class DishUtil {
     public static List<DishTo> getTos(List<Dish> menu) {
         return menu.stream()
                 .map(DishUtil::createTo)
-                .sorted()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static DishTo createTo(Dish dish) {
