@@ -5,6 +5,7 @@ import ru.favdemo.restaurantvoting.model.Restaurant;
 import ru.favdemo.restaurantvoting.to.RestaurantTo;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class RestaurantUtil {
@@ -12,8 +13,7 @@ public class RestaurantUtil {
     public static List<RestaurantTo> getTos(List<Restaurant> restaurants) {
         return restaurants.stream()
                 .map(RestaurantUtil::createTo)
-                .sorted()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static RestaurantTo createTo(Restaurant restaurant) {
